fix: :bug: Fix missing settings i18n and review active effects possble target properties

--- a/lang/en.json
+++ b/lang/en.json
@@ -285,8 +285,10 @@
   "SDM.SettingsBaseItemSlotsHint": "Base number of item slots for a character",
   "SDM.SettingsBaseBurdenSlots": "Base Burden Slots",
   "SDM.SettingsBaseBurdenSlotsHint": "Base number of burden slots for a character",
-  "SDM.SettingsBaseNPCMorabel": "NPC Base Morale",
-  "SDM.SettingsBaseNPCMorabelHint": "Base number for NPCs morale value",
+  "SDM.SettingsBaseMoraleFormula": "Base Morale Formula",
+  "SDM.SettingsBaseMoraleFormulaHint": "Base Morale roll formula for NPCs",
+  "SDM.SettingsBaseReactionFormula": "Base Reaction Formula",
+  "SDM.SettingsBaseReactionFormulaHint": "Base roll formula for Reaction rolls",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
@@ -316,23 +318,41 @@
   "SDM.WeaponVersatileDamage": "Versatile Damage",
   "EFFECT.TabDuration": "Duration",
   "SDM.EffectsLabel.system.initiative_bonus": "Initiative bonus",
+  "SDM.EffectsLabel.system.armor_bonus": "Armor Bonus",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Mental defense bonus",
   "SDM.EffectsLabel.system.social_defense_bonus": "Social defense bonus",
-  "SDM.EffectsLabel.system.ward": "Ward bonus (affects mental defense and all saving throw rolls)",
+  "SDM.EffectsLabel.system.ward_bonus": "Ward bonus (affects mental defense and all saving throw rolls)",
   "SDM.EffectsLabel.system.prestige": "Prestige bonus (social defense)",
-  "SDM.EffectsLabel.system.trait_slots_bonus": "Extra trait slots",
-  "SDM.EffectsLabel.system.item_slots_bonus": "Extra item slots",
-  "SDM.EffectsLabel.system.small_item_slots_bonus": "Number of extra item slots for small sized (sp) items",
-  "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of extra item slots for packade items (not readied items)",
-  "SDM.EffectsLabel.system.burden_slots_bonus": "Extra burden slots",
+  "SDM.EffectsLabel.system.trait_slots_bonus": "Affects the number of trait slots",
+  "SDM.EffectsLabel.system.item_slots_bonus": "Affects the number of item slots",
+  "SDM.EffectsLabel.system.small_item_slots_bonus": "Number small sized (sp) items that won't take items slots",
+  "SDM.EffectsLabel.system.packed_item_slots_bonus": "Number of packade items (not readied items) that won't take item slots",
+  "SDM.EffectsLabel.system.burden_slots_bonus": "Affects the number of burden slots",
+  "SDM.EffectsLabel.system.power_slots_bonus": "Number of powers that won't take either item or trait slots",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Extra hero dice (increases the max number of hero dice)",
   "SDM.EffectsLabel.system.hero_dice.dice_type": "Hero dice type, override with: (d4, d6, d8, d10, d12 or d20)",
-  "SDM.EffectsLabel.system.reaction_bonus": "",
-  "SDM.EffectsLabel.system.save_target": "",
-  "SDM.EffectsLabel.system.life.bonus": "",
-  "SDM.EffectsLabel.system.melee.bonus": "",
-  "SDM.EffectsLabel.system.oldtech.bonus": "",
+  "SDM.EffectsLabel.system.reaction_bonus": "Reaction Bonus",
+  "SDM.EffectsLabel.system.all_save_bonus": "Bonus to all saving throw rolls",
+  "SDM.EffectsLabel.system.life.bonus": "Life Bonus",
+  "SDM.EffectsLabel.system.attack_bonus": "All attack bonus",
+  "SDM.EffectsLabel.system.melee.bonus": "Melee attack bonus",
+  "SDM.EffectsLabel.system.ranged.bonus": "Ranged attack bonus",
+  "SDM.EffectsLabel.system.oldtech.bonus": "Oldtech attack bonus",
+  "SDM.EffectsLabel.system.fantascience.bonus": "Fantascience attack bonus",
+  "SDM.EffectsLabel.system.power_cost": "Power Cost",
+  "SDM.EffectsLabel.system.abilities.str.bonus": "Strength Bonus",
+  "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bonus to Strength Saving Throw",
+  "SDM.EffectsLabel.system.abilities.end.bonus": "Endurance Bonus",
+  "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bonus to Endurance Saving Throw",
+  "SDM.EffectsLabel.system.abilities.agi.bonus": "Agility Bonus",
+  "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bonus to Agility Saving Throw",
+  "SDM.EffectsLabel.system.abilities.cha.bonus": "Charisma Bonus",
+  "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bonus to Charisma Saving Throw",
+  "SDM.EffectsLabel.system.abilities.aur.bonus": "Aura Bonus",
+  "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bonus to Aura Saving Throw",
+  "SDM.EffectsLabel.system.abilities.tho.bonus": "Thought Bonus",
+  "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bonus to Thought Saving Throw",
   "SDM.ExplodingDice": "Exploding Dice",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
   "COMBAT.RollsInitiative": "{name} rolls for initiative!",
