--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -280,23 +280,25 @@
   "SDM.SettingsBaseSocialDefense": "Defesa Social Inicial",
   "SDM.SettingsBaseSocialDefenseHint": "Defesa social padrão",
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
-  "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços para traços",
+  "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços de inventário para traços",
   "SDM.SettingsBaseItemSlots": "Espaços de Itens Base",
-  "SDM.SettingsBaseItemSlotsHint": "Número base de espaços para itens",
+  "SDM.SettingsBaseItemSlotsHint": "Número base de espaços de inventário para itens",
   "SDM.SettingsBaseBurdenSlots": "Espaços de Fardos Base",
-  "SDM.SettingsBaseBurdenSlotsHint": "Número base de espaços para fardos",
-  "SDM.SettingsBaseNPCMorabel": "Moral Base de NPCs",
-  "SDM.SettingsBaseNPCMorabelHint": "Valor base para moral de NPCs",
+  "SDM.SettingsBaseBurdenSlotsHint": "Número base de espaços de inventário para fardos",
+  "SDM.SettingBaseMoraleFormula": "Rolagem de Moral",
+  "SDM.SettingBaseMoraleFormulaHint": "Formula padrão para rolagens de Moral de NPCs",
+  "SDM.SettingBaseReactionFormula": "Rolagem de Reação",
+  "SDM.SettingBaseReactionFormulaHint": "Fórmula padrão para rolagens de Reação",
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
-  "SDM.SettingsInitiativeFormulaHint": "Fórmula padrão para personagens",
+  "SDM.SettingsInitiativeFormulaHint": "Rolagem padrão de Iniciativa para personagens jogadores",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
-  "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de initiativa para NPCs",
-  "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para resistências",
-  "SDM.SettingsSavingThrowBaseRollFormulaHint": "Fórmula padrão para rolagens de resistência",
-  "SDM.SettingsHealingHouseRule": "Regra de Cura",
-  "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior",
+  "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de Initiativa para NPCs",
+  "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para Salvaguardas",
+  "SDM.SettingsSavingThrowBaseRollFormulaHint": "Fórmula padrão para rolagens de Salvaguarda",
+  "SDM.SettingsHealingHouseRule": "Regra da Casa para Cura",
+  "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior resultado",
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
   "SDM.SheetEditMode": "Modo de Edição",
   "SDM.SheetPlayMode": "Modo de Jogo",
@@ -315,24 +317,42 @@
   "SDM.WeaponDamage": "Dano",
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
-  "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
+ "SDM.EffectsLabel.system.initiative_bonus": "Bônus de iniciativa",
+  "SDM.EffectsLabel.system.armor_bonus": "Bônus de armadura",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.mental_defense_bonus": "Bônus de defesa mental",
   "SDM.EffectsLabel.system.social_defense_bonus": "Bônus de defesa social",
-  "SDM.EffectsLabel.system.ward": "Bônus de proteção (afeta defesa mental e resistências)",
+  "SDM.EffectsLabel.system.ward_bonus": "Bônus de proteção (afeta defesa mental e todas as rolagens de salvaguarda)",
   "SDM.EffectsLabel.system.prestige": "Bônus de prestígio (defesa social)",
-  "SDM.EffectsLabel.system.trait_slots_bonus": "Espaços extras para traços",
-  "SDM.EffectsLabel.system.item_slots_bonus": "Espaços extras para itens",
-  "SDM.EffectsLabel.system.small_item_slots_bonus": "Espaços extras para itens pequenos (sp)",
-  "SDM.EffectsLabel.system.packed_item_slots_bonus": "Espaços extras para itens empacotados (não equipados)",
-  "SDM.EffectsLabel.system.burden_slots_bonus": "Espaços extras para fardos",
-  "SDM.EffectsLabel.system.hero_dice.bonus": "Dados heróicos extras (aumenta o máximo)",
-  "SDM.EffectsLabel.system.hero_dice.dice_type": "Tipo de dado heróico (sobrescreve: d4-d20)",
-  "SDM.EffectsLabel.system.reaction_bonus": "",
-  "SDM.EffectsLabel.system.save_target": "",
-  "SDM.EffectsLabel.system.life.bonus": "",
-  "SDM.EffectsLabel.system.melee.bonus": "",
-  "SDM.EffectsLabel.system.oldtech.bonus": "",
+  "SDM.EffectsLabel.system.trait_slots_bonus": "Afeta o número de espaços para traços",
+  "SDM.EffectsLabel.system.item_slots_bonus": "Afeta o número de espaços para itens",
+  "SDM.EffectsLabel.system.small_item_slots_bonus": "Número de itens pequenos (ct) que não ocupam espaços",
+  "SDM.EffectsLabel.system.packed_item_slots_bonus": "Número de itens empacotados (não equipados) que não ocupam espaços",
+  "SDM.EffectsLabel.system.burden_slots_bonus": "Afeta o número de espaços para fardos",
+  "SDM.EffectsLabel.system.power_slots_bonus": "Número de poderes que não ocupam espaços de itens ou traços",
+  "SDM.EffectsLabel.system.hero_dice.bonus": "Dados heróicos extras (aumenta o número máximo de dados heróicos)",
+  "SDM.EffectsLabel.system.hero_dice.dice_type": "Tipo de dado heróico (sobrescreve com: d4, d6, d8, d10, d12 ou d20)",
+  "SDM.EffectsLabel.system.reaction_bonus": "Bônus de reação",
+  "SDM.EffectsLabel.system.all_save_bonus": "Bônus para todas as rolagens de salvaguarda",
+  "SDM.EffectsLabel.system.life.bonus": "Bônus de vida",
+  "SDM.EffectsLabel.system.attack_bonus": "Bônus para todos os ataques",
+  "SDM.EffectsLabel.system.melee.bonus": "Bônus de ataque corpo a corpo",
+  "SDM.EffectsLabel.system.ranged.bonus": "Bônus de ataque à distância",
+  "SDM.EffectsLabel.system.oldtech.bonus": "Bônus de ataque com velhatec",
+  "SDM.EffectsLabel.system.fantascience.bonus": "Bônus de ataque com fantasciência",
+  "SDM.EffectsLabel.system.power_cost": "Custo de poderes",
+  "SDM.EffectsLabel.system.abilities.str.bonus": "Bônus de Força",
+  "SDM.EffectsLabel.system.abilities.str.save_bonus": "Bônus para Salvaguarda de Força",
+  "SDM.EffectsLabel.system.abilities.end.bonus": "Bônus de Resistência",
+  "SDM.EffectsLabel.system.abilities.end.save_bonus": "Bônus para Salvaguarda de Resistência",
+  "SDM.EffectsLabel.system.abilities.agi.bonus": "Bônus de Rapidez",
+  "SDM.EffectsLabel.system.abilities.agi.save_bonus": "Bônus para Salvaguarda de Rapidez",
+  "SDM.EffectsLabel.system.abilities.cha.bonus": "Bônus de Carisma",
+  "SDM.EffectsLabel.system.abilities.cha.save_bonus": "Bônus para Salvaguarda de Carisma",
+  "SDM.EffectsLabel.system.abilities.aur.bonus": "Bônus de Aura",
+  "SDM.EffectsLabel.system.abilities.aur.save_bonus": "Bônus para Salvaguarda de Aura",
+  "SDM.EffectsLabel.system.abilities.tho.bonus": "Bônus de Inteligência",
+  "SDM.EffectsLabel.system.abilities.tho.save_bonus": "Bônus para Salvaguarda de Inteligência",
   "SDM.ExplodingDice": "Dados Explosivos",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
   "COMBAT.RollsInitiative": "{name} rolou sua iniciativa!",
