feat: :sparkles: Add support for social and metal attacks

--- a/lang/en.json
+++ b/lang/en.json
@@ -20,6 +20,10 @@
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackOldtech": "Oldtech",
   "SDM.AttackFantascience": "Fantascience",
+  "SDM.AttackHa": "physical",
+  "SDM.AttackKa": "mental",
+  "SDM.AttackBa": "social",
+  "SDM.AttackTarget": "Attack Type",
   "SDM.Magitech": "Magitech",
   "SDM.Psychemagic": "Psychemagic",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
@@ -185,6 +189,9 @@
   "SDM.Transfer": "Transfer {type}",
   "SDM.TransferTo": "To",
   "SDM.Target": "Target",
+  "SDM.Result": "Result",
+  "SDM.Success": "Success",
+  "SDM.Failure": "Failure",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferItemComplete": "{item} transferred to {target}",
   "SDM.TransferFailed": "Transfer failed: {error}",
