--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -20,6 +20,10 @@
   "SDM.AttackRanged": "À Distância",
   "SDM.AttackOldtech": "Velhatec",
   "SDM.AttackFantascience": "Fantasciência",
+  "SDM.AttackHa": "físico",
+  "SDM.AttackKa": "mental",
+  "SDM.AttackBa": "social",
+  "SDM.AttackTarget": "Tipo de Ataque",
   "SDM.Magitech": "Tecnomagia",
   "SDM.Psychemagic": "Psicomagia",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
@@ -185,6 +189,9 @@
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferTo": "Para",
   "SDM.Target": "Alvo",
+  "SDM.Result": "Resultado",
+  "SDM.Success": "Successo",
+  "SDM.Failure": "Falha",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferItemComplete": "{item} transferido para {target}",
   "SDM.TransferFailed": "Falha na transferência: {error}",
