feat: :sparkles: Add apply damage or healing context menu options on chat messages

--- a/lang/en.json
+++ b/lang/en.json
@@ -24,6 +24,8 @@
   "SDM.AttackKa": "mental",
   "SDM.AttackBa": "social",
   "SDM.AttackTarget": "Attack Type",
+  "SDM.ChatContextDamage": "Apply as Damage",
+  "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.Magitech": "Magitech",
   "SDM.Psychemagic": "Psychemagic",
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
