feat: :sparkles: Add critical success and failure tracking and styling on d20 based rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -20,10 +20,12 @@
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackOldtech": "Oldtech",
   "SDM.AttackFantascience": "Fantascience",
-  "SDM.AttackHa": "physical",
-  "SDM.AttackKa": "mental",
-  "SDM.AttackBa": "social",
+  "SDM.AttackPhysical": "physical",
+  "SDM.AttackMental": "mental",
+  "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Attack Type",
+  "SDM.CriticalSuccess": "Critical Success",
+  "SDM.CriticalFailure": "Critical Failure",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.Magitech": "Magitech",
