--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -20,10 +20,12 @@
   "SDM.AttackRanged": "À Distância",
   "SDM.AttackOldtech": "Velhatec",
   "SDM.AttackFantascience": "Fantasciência",
-  "SDM.AttackHa": "físico",
-  "SDM.AttackKa": "mental",
-  "SDM.AttackBa": "social",
+  "SDM.AttackPhysical": "físico",
+  "SDM.AttackMental": "mental",
+  "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Tipo de Ataque",
+  "SDM.CriticalSuccess": "Sucesso Crítico",
+  "SDM.CriticalFailure": "Falha Crítica",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.Magitech": "Tecnomagia",
