feat: Add item transfers using sockets and limit player interactions with not owned sheets

--- a/lang/en.json
+++ b/lang/en.json
@@ -249,6 +249,10 @@
   "SDM.ErrorMissingDamageFormula": "Item doesn't have configured damage roll formula",
   "SDM.ErrorInvalidTarget": "Invalid target actor",
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
+  "SDM.TransferReceived": "You received {item} from {source}",
+  "SDM.TransferRequestSent": "Transfer request sent to GM",
+  "SDM.TransferComplete": "Transfer completed successfully",
+  "SDM.TransferFailedGeneric": "Transfer failed unexpectedly",
   "SDM.ErrorTransferItemNotAvailable": "Item is no longer available for transfer",
   "SDM.ErrorTransferInvalidItemState": "Item state changed during transfer",
   "SDM.ErrorTransferAlreadyInProgress": "Item {name} is already being transferred",
