feat: :sparkles: Add on target and natural 13 rolls results

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,8 @@
   "SDM.AttackTarget": "Attack Type",
   "SDM.CriticalSuccess": "Critical Success",
   "SDM.CriticalFailure": "Critical Failure",
+  "SDM.ForceOrFail": "Sacrifice something to succeed",
+  "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.Magitech": "Magitech",
@@ -253,6 +255,7 @@
   "SDM.TransferRequestSent": "Transfer request sent to GM",
   "SDM.TransferComplete": "Transfer completed successfully",
   "SDM.TransferFailedGeneric": "Transfer failed unexpectedly",
+  "SDM.ErrorTransferNoActiveGM": "Item transfer requires a GM to be online",
   "SDM.ErrorTransferItemNotAvailable": "Item is no longer available for transfer",
   "SDM.ErrorTransferInvalidItemState": "Item state changed during transfer",
   "SDM.ErrorTransferAlreadyInProgress": "Item {name} is already being transferred",
