--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -26,6 +26,8 @@
   "SDM.AttackTarget": "Tipo de Ataque",
   "SDM.CriticalSuccess": "Sucesso Crítico",
   "SDM.CriticalFailure": "Falha Crítica",
+  "SDM.ForceOrFail": "Sacrifique algo ou falhe",
+  "SDM.DepletedResources": "Última bala, Resta uma",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.Magitech": "Tecnomagia",
@@ -254,6 +256,7 @@
   "SDM.ErrorTransferAlreadyInProgress": "Item {name} já está sendo transferido",
   "SDM.ErrorTransferSessionExperied": "Sessão de transferência expirada",
   "SDM.ErrorTransferTargetHasItem": "Alvo já possui este item",
+  "SDM.ErrorTransferNoActiveGM": "A transferência de itens só funciona com o Mestre online",
   "SDM.ErrorTransferAmountNotPositive": "Quantidade deve ser um número positivo",
   "SDM.ErrorTransferExcessCashAmount": "Não é possível transferir mais dinheiro que o disponível",
   "SDM.ErrorWeightLimit": "Isto excederia a capacidade de carga de {target}",
