fix: :lipstick: Fix typo on pt-BR translation file

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -27,7 +27,7 @@
   "SDM.CriticalSuccess": "Sucesso Crítico",
   "SDM.CriticalFailure": "Falha Crítica",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
-  "SDM.DepletedResources": "Última bala, Resta uma",
+  "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.Magitech": "Tecnomagia",
@@ -195,7 +195,7 @@
   "SDM.TransferTo": "Para",
   "SDM.Target": "Alvo",
   "SDM.Result": "Resultado",
-  "SDM.Success": "Successo",
+  "SDM.Success": "Sucesso",
   "SDM.Failure": "Falha",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferItemComplete": "{item} transferido para {target}",
