feat: :sparkles: Add power containers and caravan inventory

--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,7 @@
   "SDM.Damage": "Damage",
   "SDM.DefaultAbility": "Default Ability",
   "SDM.DeleteDocConfirmation": "Delete {doc} permanently?",
+  "SDM.DeletePower": "Delete Power",
   "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.DistributeXP": "Distribute XP",
   "SDM.Effect.ChangeProperty": "Property",
@@ -181,9 +182,10 @@
   "SDM.FieldSocialDefense": "Social Defense",
   "SDM.FieldSpecies": "Species",
   "SDM.FieldWealth": "Wealth",
+  "SDM.ForceOrFail": "Sacrifice something to succeed",
   "SDM.FrequencyDay": "Day",
   "SDM.FrequencyWeek": "Week",
-  "SDM.ForceOrFail": "Sacrifice something to succeed",
+  "SDM.GearMaxPowers": "Max Stored Powers",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HealingHouseRuleHint": "",
   "SDM.HeroDice": "hero dice",
@@ -196,7 +198,7 @@
   "SDM.InventoryTraits": "Traits",
   "SDM.ItemArmor": "Armor",
   "SDM.ItemArmorType": "Type",
-  "SDM.ItemCost": "Cost (€)",
+  "SDM.ItemCost": "Unit Cost (€)",
   "SDM.ItemGearType": "Item Type",
   "SDM.ItemMountCapacity": "Capacity",
   "SDM.ItemMountLevel": "Level",
@@ -228,17 +230,21 @@
   "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
+  "SDM.NoPowers": "Empty Power Container",
   "SDM.NpcCr": "CR",
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
+  "SDM.PowerContainer": "Power Container",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
+  "SDM.PowerDescription": "Description",
   "SDM.PowerDuration": "Duration",
   "SDM.PowerDurationAbbr": "D",
-  "SDM.PowerLevel": "Level",
+  "SDM.PowerLevel": "Power Level",
   "SDM.PowerLevelAbbr": "P",
+  "SDM.PowerName": "Name",
   "SDM.PowerOvercharge": "Overcharge",
   "SDM.PowerOverchargeAbbr": "Overcharge",
   "SDM.PowerRange": "Range",
