--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -71,6 +71,7 @@
   "SDM.Damage": "Dano",
   "SDM.DefaultAbility": "Atributo Padrão",
   "SDM.DeleteDocConfirmation": "Deletar {doc} permanentemente?",
+  "SDM.DeletePower": "Deletar Poder",
   "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.DistributeXP": "Distribuir EXP",
   "SDM.Effect.ChangeProperty": "Propriedade",
@@ -182,6 +183,7 @@
   "SDM.FieldSpecies": "Espécie",
   "SDM.FieldWealth": "Riqueza",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
+  "SDM.GearMaxPowers": "Máximo de Poderes",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HealingHouseRuleHint": "",
   "SDM.HeroDice": "dados heróicos",
@@ -194,7 +196,7 @@
   "SDM.InventoryTraits": "Traços",
   "SDM.ItemArmor": "Armadura",
   "SDM.ItemArmorType": "Tipo",
-  "SDM.ItemCost": "Custo",
+  "SDM.ItemCost": "Custo Unitário (€)",
   "SDM.ItemGearType": "Tipo de Item",
   "SDM.ItemMountCapacity": "Capacidade",
   "SDM.ItemMountLevel": "Nível",
@@ -226,6 +228,7 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
+  "SDM.NoPowers": "Contêiner de Poderes Vazio",
   "SDM.NpcCr": "ND",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
@@ -233,10 +236,12 @@
   "SDM.Power": "Poder",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
+  "SDM.PowerDescription": "Descrição",
   "SDM.PowerDuration": "Duração",
   "SDM.PowerDurationAbbr": "D",
   "SDM.PowerLevel": "Nível",
   "SDM.PowerLevelAbbr": "N",
+  "SDM.PowerName": "Nome",
   "SDM.PowerOvercharge": "Sobrecarga",
   "SDM.PowerOverchargeAbbr": "Sobrecarga",
   "SDM.PowerRange": "Alcançe",
@@ -394,7 +399,7 @@
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Montaria",
   "TYPES.Item.power": "Poder",
-  "TYPES.Item.power_container": "Container de Poderes",
+  "TYPES.Item.power_container": "Contêiner de Poderes",
   "TYPES.Item.skill": "Perícia",
   "TYPES.Item.trait": "Traço",
   "TYPES.Item.vehicle": "Veículo",
