feat: :sparkles: Add default config in combat tracker actors prototype tokens and new group initiative logic

--- a/lang/en.json
+++ b/lang/en.json
@@ -61,6 +61,7 @@
   "SDM.CashManagementCompleted": "Cash transfer successful for {number} character(s)!",
   "SDM.CashManagementRemoveMoney": "Charge Money",
   "SDM.CashSymbol": "€",
+  "SDM.Cast": "Cast",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
@@ -247,6 +248,7 @@
   "SDM.PowerName": "Name",
   "SDM.PowerOvercharge": "Overcharge",
   "SDM.PowerOverchargeAbbr": "Overcharge",
+  "SDM.PowerOverchargeRollFormula": "Overcharge Roll",
   "SDM.PowerRange": "Range",
   "SDM.PowerRangeAbbr": "R",
   "SDM.PowerRollFormula": "Roll Formula",
