--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -61,6 +61,7 @@
   "SDM.CashManagementCompleted": "Transferência concluída para {number} personagem(ns)!",
   "SDM.CashManagementRemoveMoney": "Remover Dinheiro",
   "SDM.CashSymbol": "€",
+  "SDM.Cast": "Conjurar",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
@@ -183,6 +184,8 @@
   "SDM.FieldSpecies": "Espécie",
   "SDM.FieldWealth": "Riqueza",
   "SDM.ForceOrFail": "Sacrifique algo ou falhe",
+  "SDM.FrequencyDay": "Dia",
+  "SDM.FrequencyWeek": "Semana",
   "SDM.GearMaxPowers": "Máximo de Poderes",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HealingHouseRuleHint": "",
@@ -234,6 +237,7 @@
   "SDM.OneHanded": "Uma mão",
   "SDM.OriginalRoll": "Rolagem original",
   "SDM.Power": "Poder",
+  "SDM.PowerContainer": "Contêiner de Poderes",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.PowerDescription": "Descrição",
@@ -244,6 +248,7 @@
   "SDM.PowerName": "Nome",
   "SDM.PowerOvercharge": "Sobrecarga",
   "SDM.PowerOverchargeAbbr": "Sobrecarga",
+  "SDM.PowerOverchargeRollFormula": "Rolagem de Sobrecarga",
   "SDM.PowerRange": "Alcançe",
   "SDM.PowerRangeAbbr": "Alc",
   "SDM.PowerRollFormula": "Fórmula de rolagem",
@@ -300,10 +305,6 @@
   "SDM.SavingThrowSave": "SE SALVOU",
   "SDM.SavingThrowSaveMessage": "Desastre evitado, fortuna apaziguada.",
   "SDM.SelectCharacter": "Selecionar Personagem",
-  "SDM.SettingBaseMoraleFormula": "Rolagem de Moral",
-  "SDM.SettingBaseMoraleFormulaHint": "Formula padrão para rolagens de Moral de NPCs",
-  "SDM.SettingBaseReactionFormula": "Rolagem de Reação",
-  "SDM.SettingBaseReactionFormulaHint": "Fórmula padrão para rolagens de Reação",
   "SDM.SettingsBaseBurdenSlots": "Espaços de Fardos Base",
   "SDM.SettingsBaseBurdenSlotsHint": "Número base de espaços de inventário para fardos",
   "SDM.SettingsBaseDefense": "Defesa Inicial",
@@ -312,6 +313,10 @@
   "SDM.SettingsBaseItemSlotsHint": "Número base de espaços de inventário para itens",
   "SDM.SettingsBaseMentalDefense": "Defesa Mental Inicial",
   "SDM.SettingsBaseMentalDefenseHint": "Defesa mental padrão",
+  "SDM.SettingsBaseMoraleFormula": "Rolagem de Moral",
+  "SDM.SettingsBaseMoraleFormulaHint": "Formula padrão para rolagens de Moral de NPCs",
+  "SDM.SettingsBaseReactionFormula": "Rolagem de Reação",
+  "SDM.SettingsBaseReactionFormulaHint": "Fórmula padrão para rolagens de Reação",
   "SDM.SettingsBaseSocialDefense": "Defesa Social Inicial",
   "SDM.SettingsBaseSocialDefenseHint": "Defesa social padrão",
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
