feat: :sparkles: Add sound effect on leveling up and additional configuration options

--- a/lang/en.json
+++ b/lang/en.json
@@ -321,32 +321,44 @@
   "SDM.SettingsBaseSocialDefenseHint": "Base social defense value for characters",
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
+  "SDM.SettingsCurrencyImg": "Currency image",
+  "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' GM Macro",
   "SDM.SettingsCurrencyName": "Currency name",
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
   "SDM.SettingsEscalatorDie": "Escalator Die",
   "SDM.SettingsEscalatorDieHint": "Every roll will be increased by this amount",
+  "SDM.SettingsExtendedSkillRanks": "Use extra skill ranks",
+  "SDM.SettingsExtendedSkillRanksHint": "Enables a 4th and a 5th skill rank options",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Roll hero dice twice and keep the highest result",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
   "SDM.SettingsInitiativeFormulaHint": "Default initiative formula for characters",
   "SDM.SettingsInvalidChange": "Invalid {settings}, reverting to default value",
+  "SDM.SettingsLevelUpSoundFx": "Level Up Sounds Effect",
+  "SDM.SettingsLevelUpSoundFxHint": "Changes the sound effect played on character level up",
   "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
   "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Base roll formula for all saving throw rolls",
+  "SDM.SettingsShouldPlayLevelUpSoundFx": "Play Level Up Sound Effect",
+  "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Plays a sound effect when a character levels up",
+  "SDM.SettingsSkillModifierStep": "Skill Rank Increment",
+  "SDM.SettingsSkillModifierStepHint": "Changes the bonus amount given in a roll by each skill rank",
   "SDM.SheetActor": "SDM Actor Sheet",
   "SDM.SheetEditMode": "Edit Mode",
   "SDM.SheetItem": "SDM Item Sheet",
   "SDM.SheetPlayMode": "Play Mode",
   "SDM.Skill": "Skill",
+  "SDM.SkillBuilder": "Builder",
   "SDM.SkillCustomModifier": "Custom Modifier",
   "SDM.SkillExpert": "Expert",
   "SDM.SkillExpertise": "Expertise",
   "SDM.SkillMaster": "Master",
   "SDM.SkillMod": "Skill Modifier",
   "SDM.SkillModifierStep": "Modifier Step",
+  "SDM.SkillPhylake": "Phylake",
   "SDM.SkillSkilled": "Skilled",
   "SDM.SpeedFast": "Fast",
   "SDM.SpeedSlow": "Slow",
