--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -321,32 +321,44 @@
   "SDM.SettingsBaseSocialDefenseHint": "Defesa social padrão",
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
   "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços de inventário para traços",
-  "SDM.SettingsCurrencyName": "Nome da Moeda",
-  "SDM.SettingsCurrencyNameHint": "Moeda primária do mundo",
+  "SDM.SettingsCurrencyImg": "Imagem padrão para itens de dinheiro",
+  "SDM.SettingsCurrencyImgHint": "Imagem padrão usada pelo macro de transferência de dinheiro",
+  "SDM.SettingsCurrencyName": "Nome da moeda",
+  "SDM.SettingsCurrencyNameHint": "Nome padrão para a moeda do mundo",
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
   "SDM.SettingsEscalatorDieHint": "Bônus aplicado a todas as rolagens",
+  "SDM.SettingsExtendedSkillRanks": "Usar ranques extras de perícias",
+  "SDM.SettingsExtendedSkillRanksHint": "Habilita um quarto e quinto ranque para perícias",
   "SDM.SettingsHealingHouseRule": "Regra da Casa para Cura",
   "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior resultado",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
   "SDM.SettingsInitiativeFormulaHint": "Rolagem padrão de Iniciativa para personagens jogadores",
   "SDM.SettingsInvalidChange": "{settings} inválido(a), revertendo para padrão",
+  "SDM.SettingsLevelUpSoundFx": "Efeito sonoro ao subir de nível",
+  "SDM.SettingsLevelUpSoundFxHint": "Muda o efeito sonoro reproduzido ao subir de nível",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
   "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de Initiativa para NPCs",
   "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para Salvaguardas",
   "SDM.SettingsSavingThrowBaseRollFormulaHint": "Fórmula padrão para rolagens de Salvaguarda",
+  "SDM.SettingsShouldPlayLevelUpSoundFx": "Tocar efeito sonoro ao subir de nível",
+  "SDM.SettingsShouldPlayLevelUpSoundFxHint": "Habilita a reprodução de um efeito sonoro quando personagens sobem de nível",
+  "SDM.SettingsSkillModifierStep": "Modificador de Perícias",
+  "SDM.SettingsSkillModifierStepHint": "Muda o incremento padrão de bonus para cada ranque de uma perícia",
   "SDM.SheetActor": "Ficha de Ator SDM",
   "SDM.SheetEditMode": "Modo de Edição",
   "SDM.SheetItem": "Ficha de Item SDM",
   "SDM.SheetPlayMode": "Modo de Jogo",
   "SDM.Skill": "Perícia",
+  "SDM.SkillBuilder": "Arquiteto",
   "SDM.SkillCustomModifier": "Modificadores Customizados",
   "SDM.SkillExpert": "Especialista",
   "SDM.SkillExpertise": "Especialização",
   "SDM.SkillMaster": "Mestre",
   "SDM.SkillMod": "Modificador de Perícia",
   "SDM.SkillModifierStep": "Incremento por Nível",
+  "SDM.SkillPhylake": "Guardião",
   "SDM.SkillSkilled": "Treinado",
   "SDM.SpeedFast": "Rápido",
   "SDM.SpeedSlow": "Lento",
