fix: :bug: Fix missing i18n strings

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,6 @@
 {
   "COMBAT.RollsInitiative": "{name} rolls for initiative!",
-  "DOCUMENT.Create": "Create {type}",
   "DOCUMENT.Delete": "Delete {type}",
-  "DOCUMENT.New": "New {type}",
   "DOCUMENT.Transfer": "Transfer {type}",
   "DOCUMENT.Update": "Update {type}",
   "EFFECT.TabDuration": "Duration",
@@ -75,6 +73,8 @@
   "SDM.DeletePower": "Delete Power",
   "SDM.DepletedResources": "Last ammo, one remains",
   "SDM.DistributeXP": "Distribute XP",
+  "SDM.DOCUMENT.Create": "Create {type}",
+  "SDM.DOCUMENT.New": "New {type}",
   "SDM.Effect.ChangeProperty": "Property",
   "SDM.Effect.Inactive": "Inactive",
   "SDM.Effect.Passive": "Passive",
@@ -127,6 +127,7 @@
   "SDM.ErrorInvalidDiceFaces": "Invalid number of faces for a die: {faces}",
   "SDM.ErrorInvalidModifier": "Invalid roll modifier",
   "SDM.ErrorInvalidTarget": "Invalid target actor",
+  "SDM.ErrorMaxPowers": "Cannot store more powers in {item}",
   "SDM.ErrorMissingDamageFormula": "Item doesn't have configured damage roll formula",
   "SDM.ErrorNoActorSelected": "No valid {type} was selected!",
   "SDM.ErrorNoHeroDice": "No Hero Dice available!",
@@ -327,6 +328,8 @@
   "SDM.SettingsCurrencyNameHint": "The primary currency used in the game world",
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
+  "SDM.SettingsDefaultMaxPowers": "Default Max Powers",
+  "SDM.SettingsDefaultMaxPowersHint": "Default number of max stored powers in a power container",
   "SDM.SettingsEscalatorDie": "Escalator Die",
   "SDM.SettingsEscalatorDieHint": "Every roll will be increased by this amount",
   "SDM.SettingsExtendedSkillRanks": "Use extra skill ranks",
@@ -387,6 +390,7 @@
   "SDM.TransferTo": "To",
   "SDM.TwoHanded": "Two-Handed",
   "SDM.UnitCash": "cash",
+  "SDM.UnitSack": "sack",
   "SDM.UnitSacks": "sacks",
   "SDM.UnitSoaps": "soaps",
   "SDM.UnitStones": "stones",
