--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -1,8 +1,6 @@
 {
   "COMBAT.RollsInitiative": "{name} rolou sua iniciativa!",
-  "DOCUMENT.Create": "Criar {type}",
   "DOCUMENT.Delete": "Deletar {type}",
-  "DOCUMENT.New": "Novo {type}",
   "DOCUMENT.Transfer": "Transferir {type}",
   "DOCUMENT.Update": "Editar {type}",
   "EFFECT.TabDuration": "Duração",
@@ -75,6 +73,8 @@
   "SDM.DeletePower": "Deletar Poder",
   "SDM.DepletedResources": "Última bala, resta uma",
   "SDM.DistributeXP": "Distribuir EXP",
+  "SDM.DOCUMENT.Create": "Criar {type}",
+  "SDM.DOCUMENT.New": "Novo {type}",
   "SDM.Effect.ChangeProperty": "Propriedade",
   "SDM.Effect.Inactive": "Inativo",
   "SDM.Effect.Passive": "Passivo",
@@ -127,6 +127,7 @@
   "SDM.ErrorInvalidDiceFaces": "Número inválido de lados para dado: {faces}",
   "SDM.ErrorInvalidModifier": "Modificador de rolagem inválido",
   "SDM.ErrorInvalidTarget": "Alvo inválido",
+  "SDM.ErrorMaxPowers": "Não é possível armazenar mais poderes em {item}",
   "SDM.ErrorMissingDamageFormula": "Item não possui fórmula de dano configurada",
   "SDM.ErrorNoActorSelected": "Nenhum {type} válido selecionado!",
   "SDM.ErrorNoHeroDice": "Nenhum Dado Heróico disponível!",
@@ -327,6 +328,8 @@
   "SDM.SettingsCurrencyNameHint": "Nome padrão para a moeda do mundo",
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
+  "SDM.SettingsDefaultMaxPowers": "Máximo padrão de podres",
+  "SDM.SettingsDefaultMaxPowersHint": "Número máximo padrão de poderes armazenados em um contêiner de poderes",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
   "SDM.SettingsEscalatorDieHint": "Bônus aplicado a todas as rolagens",
   "SDM.SettingsExtendedSkillRanks": "Usar ranques extras de perícias",
@@ -387,6 +390,7 @@
   "SDM.TransferTo": "Para",
   "SDM.TwoHanded": "Duas mãos",
   "SDM.UnitCash": "dinheiro",
+  "SDM.UnitSack": "saca",
   "SDM.UnitSacks": "sacas",
   "SDM.UnitSoaps": "carteiras",
   "SDM.UnitStones": "mochilas",
