feat: :lipstick: Renamed power container to power album

--- a/lang/en.json
+++ b/lang/en.json
@@ -232,13 +232,13 @@
   "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
-  "SDM.NoPowers": "Empty Power Container",
+  "SDM.NoPowers": "Empty Power Album",
   "SDM.NpcCr": "CR",
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
-  "SDM.PowerContainer": "Power Container",
+  "SDM.PowerAlbum": "Power Album",
   "SDM.PowerCost": "Power Cost",
   "SDM.PowerCostHint": "Life cost for each power level",
   "SDM.PowerDescription": "Description",
@@ -329,7 +329,7 @@
   "SDM.SettingsDefaultHeroDiceType": "Default Hero Dice",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Changes the default hero dice type for all characters",
   "SDM.SettingsDefaultMaxPowers": "Default Max Powers",
-  "SDM.SettingsDefaultMaxPowersHint": "Default number of max stored powers in a power container",
+  "SDM.SettingsDefaultMaxPowersHint": "Default number of max stored powers in a power album",
   "SDM.SettingsEscalatorDie": "Escalator Die",
   "SDM.SettingsEscalatorDieHint": "Every roll will be increased by this amount",
   "SDM.SettingsExtendedSkillRanks": "Use extra skill ranks",
@@ -420,7 +420,7 @@
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Mount",
   "TYPES.Item.power": "Power",
-  "TYPES.Item.power_container": "Power Container",
+  "TYPES.Item.power_album": "Power Album",
   "TYPES.Item.skill": "Skill",
   "TYPES.Item.trait": "Trait",
   "TYPES.Item.vehicle": "Vehicle",
