--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -232,13 +232,13 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
-  "SDM.NoPowers": "Contêiner de Poderes Vazio",
+  "SDM.NoPowers": "Álbum de Poderes Vazio",
   "SDM.NpcCr": "ND",
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
   "SDM.OriginalRoll": "Rolagem original",
   "SDM.Power": "Poder",
-  "SDM.PowerContainer": "Contêiner de Poderes",
+  "SDM.PowerAlbum": "Álbum de Poderes",
   "SDM.PowerCost": "Custo de Poderes",
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.PowerDescription": "Descrição",
@@ -329,7 +329,7 @@
   "SDM.SettingsDefaultHeroDiceType": "Dado Heróico padrão",
   "SDM.SettingsDefaultHeroDiceTypeHint": "Muda o tipo padrão de dado heróico para todos personagens jogadores",
   "SDM.SettingsDefaultMaxPowers": "Máximo padrão de podres",
-  "SDM.SettingsDefaultMaxPowersHint": "Número máximo padrão de poderes armazenados em um contêiner de poderes",
+  "SDM.SettingsDefaultMaxPowersHint": "Número máximo padrão de poderes armazenados em um álbum de poderes",
   "SDM.SettingsEscalatorDie": "Dado de Intensidade",
   "SDM.SettingsEscalatorDieHint": "Bônus aplicado a todas as rolagens",
   "SDM.SettingsExtendedSkillRanks": "Usar ranques extras de perícias",
@@ -420,7 +420,7 @@
   "TYPES.Item.gear": "Item",
   "TYPES.Item.mount": "Montaria",
   "TYPES.Item.power": "Poder",
-  "TYPES.Item.power_container": "Contêiner de Poderes",
+  "TYPES.Item.power_album": "Álbum de Poderes",
   "TYPES.Item.skill": "Perícia",
   "TYPES.Item.trait": "Traço",
   "TYPES.Item.vehicle": "Veículo",
