fix: :bug: Add missing i18n and localized ordered abilities in items dropdowns

--- a/lang/en.json
+++ b/lang/en.json
@@ -394,8 +394,11 @@
   "SDM.UnitCash": "cash",
   "SDM.UnitSack": "sack",
   "SDM.UnitSacks": "sacks",
+  "SDM.UnitSacksAbbr": "sk",
   "SDM.UnitSoaps": "soaps",
+  "SDM.UnitSoapsAbbr": "sp",
   "SDM.UnitStones": "stones",
+  "SDM.UnitStonesAbbr": "st",
   "SDM.UpdateAttack": "Configure {attack} Attack Options",
   "SDM.UpdatedHeroDice": "Updated hero dice for {number} character(s)!",
   "SDM.WardType": "Type",
