--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -243,7 +243,7 @@
   "SDM.PowerCostHint": "Custo em vida para cada nível de um poder",
   "SDM.PowerDescription": "Descrição",
   "SDM.PowerDuration": "Duração",
-  "SDM.PowerDurationAbbr": "D",
+  "SDM.PowerDurationAbbr": "Dur",
   "SDM.PowerLevel": "Nível",
   "SDM.PowerLevelAbbr": "N",
   "SDM.PowerName": "Nome",
@@ -255,7 +255,7 @@
   "SDM.PowerRollFormula": "Fórmula de rolagem",
   "SDM.PowerRollFormulaAbbr": "Rolagem",
   "SDM.PowerTarget": "Alvo",
-  "SDM.PowerTargetAbbr": "A",
+  "SDM.PowerTargetAbbr": "Alv",
   "SDM.Psychemagic": "Psicomagia",
   "SDM.PullModeCarting": "transporte",
   "SDM.PullModeDragging": "arraste",
@@ -394,8 +394,11 @@
   "SDM.UnitCash": "dinheiro",
   "SDM.UnitSack": "saca",
   "SDM.UnitSacks": "sacas",
+  "SDM.UnitSacksAbbr": "sc",
   "SDM.UnitSoaps": "carteiras",
+  "SDM.UnitSoapsAbbr": "crt",
   "SDM.UnitStones": "mochilas",
+  "SDM.UnitStonesAbbr": "mo",
   "SDM.UpdateAttack": "Configurar Ataque {attack}",
   "SDM.UpdatedHeroDice": "Dados heróicos atualizados para {number} personagem(ns)!",
   "SDM.WardType": "Tipo",
