feat: :lipstick: Change power album content to a tab

--- a/lang/en.json
+++ b/lang/en.json
@@ -213,6 +213,7 @@
   "SDM.ItemReadied": "Readied",
   "SDM.ItemSizeUnit": "Unit",
   "SDM.ItemSizeValue": "Size",
+  "SDM.ItemTabAlbum": "Album",
   "SDM.ItemTabAttributes": "Attributes",
   "SDM.ItemTabDescription": "Description",
   "SDM.ItemTabEffects": "Effects",
