--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -213,6 +213,7 @@
   "SDM.ItemReadied": "Equipado",
   "SDM.ItemSizeUnit": "Unidade",
   "SDM.ItemSizeValue": "Tamanho",
+  "SDM.ItemTabAlbum": "Álbum",
   "SDM.ItemTabAttributes": "Atributos",
   "SDM.ItemTabDescription": "Descrição",
   "SDM.ItemTabEffects": "Efeitos",
